[package]
name = "test-gsmtc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
windows = { version = "0.54.0", features = [
    "Media_Control",
    "Foundation",
    "Foundation_Collections",
    "Storage_Streams",
    "Win32_Foundation",
] }

[profile.release]
lto = true
strip = true
panic = "abort"
opt-level = "z"
